<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/about"
        app:titleTextAppearance="@style/TitleTextAppearance"
        app:titleTextColor="@color/colorAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="4dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="24dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/splash"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_des" />

                    <View
                        android:id="@+id/view_card_about_2_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#B6B3B3" />

                    <LinearLayout
                        android:id="@+id/send_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="16dp"
                            android:src="@drawable/ic_feedback"
                            tools:ignore="ContentDescription"
                            app:tint="@color/colorPrimaryDark" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingEnd="16dp"
                            android:paddingRight="16dp"
                            tools:ignore="RtlSymmetry">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:paddingTop="16dp"
                                android:text="@string/send_feedback"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                                android:textStyle="bold" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:paddingTop="4dp"
                                android:paddingBottom="16dp"
                                android:text="@string/send_feedback_des"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/about_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="24dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/about_dev"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:drawableTop="@drawable/ic_android"
                                android:drawablePadding="12dp"
                                android:gravity="center"
                                android:padding="16dp"
                                android:text="@string/anas_shakaki"
                                android:textColor="#000000"
                                android:textStyle="bold"
                                app:drawableTint="@color/colorPrimaryDark" />

                            <Space
                                android:layout_width="24dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:drawableTop="@drawable/ic_ios"
                                android:drawablePadding="12dp"
                                android:gravity="center"
                                android:padding="16dp"
                                android:text="@string/tamim_kabbani"
                                android:textColor="#000000"
                                android:textStyle="bold"
                                app:drawableTint="@color/colorPrimaryDark" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/anas_email"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:background="?android:selectableItemBackground"
                                android:clickable="true"
                                android:ellipsize="end"
                                android:focusable="true"
                                android:gravity="center"
                                android:maxLines="1"
                                android:padding="12dp"
                                android:text="@string/anas_email"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_email"
                                tools:ignore="ContentDescription"
                                app:tint="#FF0000" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tamim_email"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:background="?android:selectableItemBackground"
                                android:clickable="true"
                                android:ellipsize="end"
                                android:focusable="true"
                                android:gravity="center"
                                android:maxLines="1"
                                android:padding="12dp"
                                android:text="@string/tamim_email"
                                android:textStyle="bold"
                                app:tooltipText="tamemkabbani24@gmail.com" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/anas_telegram"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:background="?android:selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:padding="12dp"
                                android:text="@string/anas_telegram"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_telegram"
                                tools:ignore="ContentDescription" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tamim_telegram"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:background="?android:selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:padding="12dp"
                                android:text="@string/tamim_telegram"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>