<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@id/chip_all"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/all"
                android:textAppearance="@style/chipTextAppearance" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_scientific"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/scientific"
                android:textAppearance="@style/chipTextAppearance" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_literary"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/literary"
                android:textAppearance="@style/chipTextAppearance" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/exam_item"
        tools:context=".fragment.BooksFragment" />


</LinearLayout>